Add basic temporary Landing Page. Fix some lint issues
